Prefer `T.valueOf(t)` over `new T(t)` for boxed primitive types
OpenJDK17 import of Byte, Boolean, etc currently have deprecated
`forRemoval=true` for constructors wrapping primitive values. In our
own code, we should prefer the new idiom as it provides caching
opportunities and potentially less heap churn.

Bug: 240254046
Test: atest CtsLibcoreOjTestCases CtsLibcoreTestCases
Change-Id: Ie6e44ccb91ef458044608d9b58a1156794166e6d